--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,10 +19,10 @@ jobs:
         run: npx playwright install --with-deps --force
       - name: Run Playwright tests
         env:
-          BASE_URL: ${{ vars.BASE_URL }},
-          API_HOST: ${{ vars.API_HOST }},
-          ADMIN_USER_NAME: ${{ secrets.ADMIN_USER_NAME }},
-          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }},
+          BASE_URL: ${{ vars.BASE_URL }}
+          API_HOST: ${{ vars.API_HOST }}
+          ADMIN_USER_NAME: ${{ secrets.ADMIN_USER_NAME }}
+          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
         run: npm run test
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
