--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "allure-playwright": "^3.4.1",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
