--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test --project=\"automation-playwright-mcp-server\"",
-    "allure-reporter": "npx allure generate ./allure-results --clean --name \"Automation-Test-Report\" -o ./allure-report && npx allure open ./allure-report"
+    "test": "npx cross-env TEST_ENV=QA npx playwright test tests/01_authorization.spec.ts",
+    "allure-reporter": "npx cross-env npx allure generate ./allure-results --clean --name \"Automation-Test-Report\" -o ./allure-report && npx allure open ./allure-report",
+    "posttest": "npm run allure-reporter"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/chuongnguyen291088/pw-mcp-server#readme",
   "devDependencies": {
+    "@cucumber/cucumber": "^12.6.0",
     "@faker-js/faker": "^10.1.0",
     "@playwright/mcp": "^0.0.43",
     "@playwright/test": "^1.56.1",
@@ -30,10 +32,14 @@
     "dotenv": "^17.2.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "playwright-bdd": "^8.4.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2"
   }
 }
